[gd_scene load_steps=19 format=3 uid="uid://bwh7snunxfbwo"]

[ext_resource type="Script" path="res://scenes/Ui/achievement_card.gd" id="1_eiqp5"]
[ext_resource type="PackedScene" uid="uid://dkjvpc2spqcpc" path="res://scenes/Component/RandomStreamPlayerComponent/random_stream_player_component.tscn" id="2_8r1rb"]
[ext_resource type="AudioStream" uid="uid://c22th3j1qr5rg" path="res://assets/audio/sfx/upgrade card/card_enter_1.wav" id="3_nrn5f"]
[ext_resource type="Texture2D" uid="uid://dgep3da82w2tt" path="res://assets/player/player.png" id="4_bjp8s"]
[ext_resource type="AudioStream" uid="uid://0dmy1nk26o07" path="res://assets/audio/sfx/upgrade card/flip_card_to_back.wav" id="4_pnogc"]
[ext_resource type="AudioStream" uid="uid://drlu2kren64hi" path="res://assets/audio/sfx/upgrade card/flip_card_to_front.wav" id="5_2t0y1"]
[ext_resource type="Theme" uid="uid://bmh7oa1jgdg2c" path="res://resources/theme/theme.tres" id="5_p6jsm"]
[ext_resource type="Texture2D" uid="uid://b4lhbpxkl7u1j" path="res://assets/pickups/experience_potion.png" id="6_7ilht"]

[sub_resource type="Animation" id="Animation_keutj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_awfe7"]
resource_name = "enter_screen"
length = 0.4
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.25, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.3, 1.3), Vector2(0.8, 0.8), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioPlayerComponent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.025, 0.39),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": ["card_enter", 0.0, 0.0],
"method": &"play_random_audio"
}, {
"args": [1.0, 1.0],
"method": &"set_pitch"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"set_is_being_loading"
}, {
"args": [false],
"method": &"set_is_being_loading"
}]
}

[sub_resource type="Animation" id="Animation_o5wnl"]
resource_name = "flip_card"
length = 0.6
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.1, 1), Vector2(1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"play_flip_audio"
}, {
"args": [],
"method": &"change_card_side"
}]
}

[sub_resource type="Animation" id="Animation_n4l8d"]
resource_name = "on_card_hover"
length = 0.375
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.375),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.175, 0.225, 0.3, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.0872665, 0.0872665, -0.0872665, 0.0872665, 0.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioPlayerComponent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["card_hover", -5.0, 0.0],
"method": &"play_random_audio"
}]
}

[sub_resource type="Animation" id="Animation_6i2vq"]
resource_name = "on_click"
length = 0.6
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.075, 0.15, 0.25, 0.325, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.174533, 0.174533, -0.174533, 0.174533, 0.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioPlayerComponent")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["insufficient_funds", 0.0, 0.0],
"method": &"play_random_audio"
}]
}

[sub_resource type="Animation" id="Animation_5ts1y"]
resource_name = "on_cursor_exit"
length = 0.375
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.175, 0.225, 0.3, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0872665, -0.0872665, 0.0872665, -0.0872665, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.375),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.1, 1.1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_6ghto"]
resource_name = "purchase"
length = 0.4
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.05, 0.25, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.174533, 0.174533, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(0.8, 0.8), Vector2(1, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioPlayerComponent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["purchase", 0.0, 0.0],
"method": &"play_random_audio"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cgyji"]
_data = {
"RESET": SubResource("Animation_keutj"),
"enter_screen": SubResource("Animation_awfe7"),
"flip_card": SubResource("Animation_o5wnl"),
"on_card_hover": SubResource("Animation_n4l8d"),
"on_click": SubResource("Animation_6i2vq"),
"on_cursor_exit": SubResource("Animation_5ts1y"),
"purchase": SubResource("Animation_6ghto")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ikng7"]
content_margin_left = 6.0
content_margin_top = 6.0
content_margin_right = 6.0
content_margin_bottom = 6.0
bg_color = Color(0, 0.656, 0.96, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.14902, 0.168627, 0.266667, 0)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_y7862"]
particle_flag_disable_z = true
angle_min = 1.07288e-05
angle_max = 360.0
angular_velocity_min = -1.60933e-05
angular_velocity_max = 200.0
radial_velocity_min = 100.0
radial_velocity_max = 200.0
gravity = Vector3(0, 400, 0)
scale_max = 1.5

[node name="AchievementCard" type="PanelContainer" groups=["meta_upgrade_card"]]
custom_minimum_size = Vector2(0, 152)
offset_left = 3.0
offset_right = 406.0
offset_bottom = 152.0
pivot_offset = Vector2(201, 76)
script = ExtResource("1_eiqp5")

[node name="AudioPlayerComponent" parent="." instance=ExtResource("2_8r1rb")]
unique_name_in_owner = true
bus = &"Sfx"
min_pitch = 1.0
max_pitch = 1.0
audio_stream_list = Array[AudioStream]([ExtResource("3_nrn5f"), ExtResource("4_pnogc"), ExtResource("5_2t0y1")])

[node name="HoverAnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
root_node = NodePath("../AnimationPlayer")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_cgyji")
}

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="BackOfCard" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 4

[node name="Vbox" type="VBoxContainer" parent="MarginContainer/BackOfCard"]
layout_mode = 2
size_flags_vertical = 4

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/BackOfCard/Vbox"]
layout_mode = 2

[node name="AchievementStatusLabel" type="Label" parent="MarginContainer/BackOfCard/Vbox/VBoxContainer2"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
theme_type_variation = &"TitleLabel"
theme_override_colors/font_shadow_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 8
theme_override_font_sizes/font_size = 22
text = "ACHIEVEMENT_STATUS_LABEL"
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/BackOfCard/Vbox"]
layout_mode = 2
size_flags_vertical = 4

[node name="StartedOnLabel" type="Label" parent="MarginContainer/BackOfCard/Vbox/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_shadow_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_colors/font_outline_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 8
theme_override_font_sizes/font_size = 18
text = "STARTED_ON_LABEL"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="CompletedOnLabel" type="Label" parent="MarginContainer/BackOfCard/Vbox/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_shadow_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_colors/font_outline_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 8
theme_override_font_sizes/font_size = 18
text = "COMPLETED_AT_LABEL"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="FrontOfCard" type="HBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 20

[node name="ImageContainer" type="VBoxContainer" parent="MarginContainer/FrontOfCard"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ImagePanelContainer" type="PanelContainer" parent="MarginContainer/FrontOfCard/ImageContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="AchievementImage" type="TextureRect" parent="MarginContainer/FrontOfCard/ImageContainer/ImagePanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_bjp8s")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/FrontOfCard"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_constants/separation = 12
alignment = 1

[node name="TitlePanelContainer" type="PanelContainer" parent="MarginContainer/FrontOfCard/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
theme_type_variation = &"AlternatePanelContainer"

[node name="NameLabel" type="Label" parent="MarginContainer/FrontOfCard/VBoxContainer/TitlePanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
theme_type_variation = &"TitleLabel"
theme_override_colors/font_shadow_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_constants/outline_size = 9
theme_override_constants/shadow_outline_size = 8
theme_override_font_sizes/font_size = 18
text = "Early retirement"
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 3

[node name="Description Label" type="Label" parent="MarginContainer/FrontOfCard/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_shadow_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_colors/font_outline_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_constants/outline_size = 9
theme_override_constants/shadow_outline_size = 8
theme_override_font_sizes/font_size = 16
text = "Lose your first game!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/FrontOfCard/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/FrontOfCard/VBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/FrontOfCard/VBoxContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(175, 0)
layout_mode = 2
mouse_filter = 2
theme = ExtResource("5_p6jsm")
theme_override_styles/fill = SubResource("StyleBoxFlat_ikng7")
max_value = 1.0
value = 1.0
show_percentage = false

[node name="ProgressLabel" type="Label" parent="MarginContainer/FrontOfCard/VBoxContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_outline_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_constants/outline_size = 8
text = "0/1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="MarginContainer/FrontOfCard/VBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/FrontOfCard/VBoxContainer/VBoxContainer/MarginContainer/Control"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
offset_left = -9.0
offset_top = -14.0
offset_right = 23.0
offset_bottom = 18.0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
texture = ExtResource("6_7ilht")

[node name="BadgeTapParticles2D" type="GPUParticles2D" parent="."]
emitting = false
amount = 24
process_material = SubResource("ParticleProcessMaterial_y7862")
speed_scale = 1.2
explosiveness = 1.0
randomness = 1.0
fixed_fps = 60

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(202.5, 91)
scale = Vector2(20.05, 6)
